--- a/user-auth-roles/views/drones/list.hbs
+++ b/user-auth-roles/views/drones/list.hbs
@@ -1,4 +1,13 @@
 <h2>Available drones</h2>
 {{#each drones}}
-  {{>droneCard this}}
+{{>droneCard this}}
+{{#if ../canEdit}}
+<a href="/drones/{{_id}}/edit">Edit</a>
+{{/if}}
+{{#if ../canDelete}}
+<form action="/drones/{{_id}}/delete" method="post">
+  <button type="submit">🗑</button>
+</form>
+{{/if}}
+</div>
 {{/each}}
